--- a/index.html
+++ b/index.html
@@ -93,6 +93,16 @@
         }
 
         list.forEach((item) => item.addEventListener('mouseover', activeLink))
+
+        // menu toggle
+        let toggle = document.querySelector('.toggle')
+        let navigation = document.querySelector('.navigation')
+        let main = document.querySelector('.main')
+
+        toggle.onclick = () => {
+            navigation.classList.toggle('active')
+            main.classList.toggle('active')
+        }
     </script>
 </body>
 </html>
