--- a/index.html
+++ b/index.html
@@ -77,6 +77,48 @@
                     <img src="user.jpg">
                 </div>
             </div>
+
+            <div class="card-box">
+                <div class="card">
+                    <div class="card-text">
+                        <div class="card-number">1,314</div>
+                        <div class="card-name">Daily Views</div>
+                    </div>
+                    <div class="card-icon">
+                        <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-text">
+                        <div class="card-number">74</div>
+                        <div class="card-name">Sales</div>
+                    </div>
+                    <div class="card-icon">
+                        <ion-icon name="cart-outline"></ion-icon>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-text">
+                        <div class="card-number">134</div>
+                        <div class="card-name">Comments</div>
+                    </div>
+                    <div class="card-icon">
+                        <ion-icon name="chatbubbles-outline"></ion-icon>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-text">
+                        <div class="card-number">$5,316</div>
+                        <div class="card-name">Earning</div>
+                    </div>
+                    <div class="card-icon">
+                        <ion-icon name="cash-outline"></ion-icon>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
