added recent-customers layout

--- a/index.html
+++ b/index.html
@@ -187,6 +187,22 @@
                         </tbody>
                     </table>
                 </div>
+
+                <div class="recent-customers">
+                    <div class="header">
+                        <h2>Recent Customers</h2>
+                    </div>
+                    <table>
+                        <tr>
+                            <td width="60px"><div class="img"><img src="user.jpg" alt=""></div></td>
+                            <td><h4>Customer<br><span>Country</span></h4></td>
+                        </tr>
+                        <tr>
+                            <td width="60px"><div class="img"><img src="user.jpg" alt=""></div></td>
+                            <td><h4>Customer<br><span>Country</span></h4></td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
